build/log/idf_py_stdout_output_1565771
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/src/motion.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/src/motion.c.obj 
/home/matt/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/matt/esp/hello_world/main/include -I/home/matt/esp/hello_world/build/config -I/home/matt/esp/esp-idf/components/newlib/platform_include -I/home/matt/esp/esp-idf/components/freertos/config/include -I/home/matt/esp/esp-idf/components/freertos/config/include/freertos -I/home/matt/esp/esp-idf/components/freertos/config/xtensa/include -I/home/matt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/matt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/matt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/matt/esp/esp-idf/components/freertos/esp_additions/include -I/home/matt/esp/esp-idf/components/esp_hw_support/include -I/home/matt/esp/esp-idf/components/esp_hw_support/include/soc -I/home/matt/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/matt/esp/esp-idf/components/esp_hw_support/dma/include -I/home/matt/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/matt/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/matt/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/matt/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/matt/esp/esp-idf/components/heap/include -I/home/matt/esp/esp-idf/components/heap/tlsf -I/home/matt/esp/esp-idf/components/log/include -I/home/matt/esp/esp-idf/components/soc/include -I/home/matt/esp/esp-idf/components/soc/esp32s3 -I/home/matt/esp/esp-idf/components/soc/esp32s3/include -I/home/matt/esp/esp-idf/components/soc/esp32s3/register -I/home/matt/esp/esp-idf/components/hal/platform_port/include -I/home/matt/esp/esp-idf/components/hal/esp32s3/include -I/home/matt/esp/esp-idf/components/hal/include -I/home/matt/esp/esp-idf/components/esp_rom/include -I/home/matt/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/matt/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/matt/esp/esp-idf/components/esp_rom/esp32s3 -I/home/matt/esp/esp-idf/components/esp_common/include -I/home/matt/esp/esp-idf/components/esp_system/include -I/home/matt/esp/esp-idf/components/esp_system/port/soc -I/home/matt/esp/esp-idf/components/esp_system/port/include/private -I/home/matt/esp/esp-idf/components/xtensa/esp32s3/include -I/home/matt/esp/esp-idf/components/xtensa/include -I/home/matt/esp/esp-idf/components/xtensa/deprecated_include -I/home/matt/esp/esp-idf/components/lwip/include -I/home/matt/esp/esp-idf/components/lwip/include/apps -I/home/matt/esp/esp-idf/components/lwip/include/apps/sntp -I/home/matt/esp/esp-idf/components/lwip/lwip/src/include -I/home/matt/esp/esp-idf/components/lwip/port/include -I/home/matt/esp/esp-idf/components/lwip/port/freertos/include -I/home/matt/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/matt/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/matt/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/matt/esp/esp-idf/components/spi_flash/include -I/home/matt/esp/hello_world/components/esp32-camera/driver/include -I/home/matt/esp/hello_world/components/esp32-camera/conversions/include -I/home/matt/esp/esp-idf/components/driver/deprecated -I/home/matt/esp/esp-idf/components/driver/i2c/include -I/home/matt/esp/esp-idf/components/driver/touch_sensor/include -I/home/matt/esp/esp-idf/components/driver/twai/include -I/home/matt/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/matt/esp/esp-idf/components/esp_pm/include -I/home/matt/esp/esp-idf/components/esp_ringbuf/include -I/home/matt/esp/esp-idf/components/esp_driver_gpio/include -I/home/matt/esp/esp-idf/components/esp_driver_pcnt/include -I/home/matt/esp/esp-idf/components/esp_driver_gptimer/include -I/home/matt/esp/esp-idf/components/esp_driver_spi/include -I/home/matt/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/matt/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/matt/esp/esp-idf/components/esp_driver_i2s/include -I/home/matt/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/matt/esp/esp-idf/components/sdmmc/include -I/home/matt/esp/esp-idf/components/esp_driver_sdspi/include -I/home/matt/esp/esp-idf/components/esp_driver_sdio/include -I/home/matt/esp/esp-idf/components/esp_driver_dac/include -I/home/matt/esp/esp-idf/components/esp_driver_rmt/include -I/home/matt/esp/esp-idf/components/esp_driver_tsens/include -I/home/matt/esp/esp-idf/components/esp_driver_sdm/include -I/home/matt/esp/esp-idf/components/esp_driver_i2c/include -I/home/matt/esp/esp-idf/components/esp_driver_uart/include -I/home/matt/esp/esp-idf/components/vfs/include -I/home/matt/esp/esp-idf/components/esp_driver_ledc/include -I/home/matt/esp/esp-idf/components/esp_driver_parlio/include -I/home/matt/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/matt/esp/hello_world/managed_components/espressif__esp_jpeg/include -I/home/matt/esp/esp-idf/components/esp_http_server/include -I/home/matt/esp/esp-idf/components/http_parser -I/home/matt/esp/esp-idf/components/esp_event/include -I/home/matt/esp/esp-idf/components/nvs_flash/include -I/home/matt/esp/esp-idf/components/esp_partition/include -I/home/matt/esp/esp-idf/components/esp_wifi/include -I/home/matt/esp/esp-idf/components/esp_wifi/include/local -I/home/matt/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/matt/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/matt/esp/esp-idf/components/esp_phy/include -I/home/matt/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/matt/esp/esp-idf/components/esp_netif/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/matt/esp/hello_world=. -fmacro-prefix-map=/home/matt/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/src/motion.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/src/motion.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/src/motion.c.obj -c /home/matt/esp/hello_world/main/src/motion.c
/home/matt/esp/hello_world/main/src/motion.c:4:6: error: conflicting types for 'handle_pir_gpio_event' due to enum/integer mismatch; have 'void(gpio_num_t)' [-Werror=enum-int-mismatch]
    4 | void handle_pir_gpio_event(gpio_num_t pin_number)
      |      ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/matt/esp/hello_world/main/src/motion.c:1:
/home/matt/esp/hello_world/main/include/motion.h:3:6: note: previous declaration of 'handle_pir_gpio_event' with type 'void(int)'
    3 | void handle_pir_gpio_event(int pin_number);
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/matt/esp/hello_world/main/src/motion.c: In function 'handle_pir_gpio_event':
/home/matt/esp/hello_world/main/src/motion.c:10:26: error: 'GPIO_LED' undeclared (first use in this function)
   10 |           gpio_set_level(GPIO_LED, 0);
      |                          ^~~~~~~~
/home/matt/esp/hello_world/main/src/motion.c:10:26: note: each undeclared identifier is reported only once for each function it appears in
cc1: some warnings being treated as errors
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/matt/esp/hello_world/build/bootloader/esp-idf/esptool_py && /home/matt/.espressif/python_env/idf5.4_py3.13_env/bin/python /home/matt/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/matt/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x51c0 bytes. 0x2e40 bytes (36%) free.
ninja: build stopped: subcommand failed.
